<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spell_front_bg"
    tools:context=".spellGame.spellFrontScreen">


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/spell_wooden_button"
        android:contentDescription="@string/todo"
        android:fontFamily="casual"
        android:onClick="backPressed"
        android:src="@drawable/abc_vector_test"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/spell_easy"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/spell_wooden_button"
            android:fontFamily="casual"
            android:text="@string/easy"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/spell_medium"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/spell_wooden_button"
            android:fontFamily="casual"
            android:text="@string/medium"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/spell_hard"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/spell_wooden_button"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/hard"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/spellfp_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-9666108206323574/3969211546"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</RelativeLayout>