<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcom"
    tools:context=".mathGame.frontScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mathgame_layer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/sign_buttons"
            android:contentDescription="@string/todo"
            android:fontFamily="casual"
            android:src="@drawable/abc_vector_test"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="-10dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/what_you_want_to_do_today"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/plus"
                android:layout_width="250dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_weight="0.5"
                android:background="@drawable/sign_buttons"
                android:fontFamily="casual"
                android:textAllCaps="false"
                android:text="@string/addition"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/minus"
                android:layout_width="250dp"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_weight="0.5"
                android:textAllCaps="false"
                android:background="@drawable/sign_buttons"
                android:fontFamily="casual"
                android:text="@string/subtraction"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/mult"
                android:layout_width="250dp"
                android:layout_height="68dp"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_weight="0.5"
                android:background="@drawable/sign_buttons"
                android:fontFamily="casual"
                android:text="@string/multiplication"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/div"
                android:layout_width="250dp"
                android:textAllCaps="false"
                android:layout_height="68dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_weight="0.5"
                android:background="@drawable/sign_buttons"
                android:fontFamily="casual"
                android:text="@string/division"
                android:textColor="#fff"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mathgame_layer2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/select_difficulty_level"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.652"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/diff_for"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:text="for"
            android:textColor="#afdfdf"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText"
            tools:layout_editor_absoluteX="0dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.686"
            tools:layout_editor_absoluteX="-16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/math_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:tag="@string/math_easy"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_buttons">

                    <TextView
                        android:id="@+id/hightscoreE"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/easy1"
                        android:gravity="end"
                        android:text="hiscoreE"
                        android:textColor="#fff"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/easy1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="70dp"
                        android:background="#000000FF"
                        android:fontFamily="casual"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/easy"
                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/math_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:tag="@string/math_med"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_buttons">

                    <TextView
                        android:id="@+id/hightscoreM"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/medium1"
                        android:gravity="end"
                        android:text="hiscoreM"
                        android:textColor="#fff"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/medium1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:background="#000000FF"
                        android:fontFamily="casual"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/medium"
                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/math_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:tag="@string/math_hard"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sign_buttons">

                    <TextView
                        android:id="@+id/hightscoreH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/hard1"
                        android:gravity="end"
                        android:text="hiscoreH"
                        android:textColor="#fff"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/hard1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="70dp"
                        android:background="#000000FF"
                        android:fontFamily="casual"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/hard"
                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/mathfp_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>