<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/spell_wooden_button"
    android:orientation="vertical"
    android:paddingTop="120dp">


    <TextView
        android:id="@+id/no_lives_spell_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/you_ran_out_of_lives"
        android:textColor="#fff"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="score and\nHigh score"
        android:textColor="#fff"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/refillLives"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/spell_dialog"
        android:fontFamily="casual"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/refill_lives"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart_math"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/spell_dialog"
        android:fontFamily="casual"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/restart_game"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp" />


</LinearLayout>